--- a/style.css
+++ b/style.css
@@ -66,30 +66,78 @@ body {
 		background-color: #FFFFFF;
 		z-index: 2;
 		display: flex;
+		align-items: center;
+}
+
+.menu-icon, .upload, .apps, .notifications, .search-icon {
+	width: 24px;
+	height: 24px;
+	padding: 8px;
+	margin-right: 16px;
+	color: #606060;
 }
 
 .menu-icon {
-	width: 24px;
-	height: 24px;
-	color: #606060;
+	margin-left: 25px;
 }
 
 .logo {
 	width: 106px;
 	height: 24px;
+	margin-right: auto;
+}
+
+.search-bar {
+	display: flex;
+	/* align-content: center; */
 }
 
 .search {
 	width: 562px;
 	height: 26px;
 	padding: 2px 6px;
-	border-radius: 3px;
-	border: 1px solid #606060;
+	border-top-left-radius: 4px;
+	border-bottom-left-radius: 4px;
+	border: 1px solid #D3D3D3;
+	font-size: 1.6rem;
+	line-height: 2.4rem;
+	font-weight: 400;
+	color: #7F7F7F;
+	display: flex;
+	align-items: center;
+}
 
+.search-button {
+	width: 47px;
+	height: 30px;
+	padding: 0 8px;
+	background-color: #F8F8F8;
+	border: 1px solid #D3D3D3;
+	border-left: none;
+	border-top-right-radius: 4px;
+	border-bottom-right-radius: 4px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.search-icon {
+	color: #818181;
+}
+
+.avatar {
+	width: 32px;
+	height: 32px;
+	border-radius: 50%;
+	margin-right: 25px;
 }
 
 .search:focus {
 	outline: none;
+}
+
+.upload {
+	margin-left: auto;
 }
 
 .whitespace {
