--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body {
 		align-items: center;
 }
 
-.menu-icon, .upload, .apps, .notifications, .search-icon {
+.menu-icon, .upload, .apps, .notifications {
 	width: 24px;
 	height: 24px;
 	padding: 8px;
@@ -122,7 +122,10 @@ body {
 }
 
 .search-icon {
+	width: 20px;
+	height: 20px;
 	color: #818181;
+	opacity: 0.6;
 }
 
 .avatar {
